Personaje que se acerca y golpea, y espera X segundos antes de poder atacar de nuevo

--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -10,9 +10,11 @@ bDynamicReplication=False
 InvalidTagCharacters="\"\',"
 NumBitsForContainerSize=6
 NetIndexFirstBitSegment=16
++GameplayTagList=(Tag="Enemy.Attack.Melee.ChargedAttack",DevComment="")
 +GameplayTagList=(Tag="Enemy.Attack.Melee.Cooldown",DevComment="")
 +GameplayTagList=(Tag="Enemy.Attack.Melee.Ultimate",DevComment="")
 +GameplayTagList=(Tag="Enemy.Attack.Melee.Ultimate.OnCooldown",DevComment="")
++GameplayTagList=(Tag="Enemy.Attacl.Melee.ChargedAttack",DevComment="")
 +GameplayTagList=(Tag="Enemy.State.Idle",DevComment="")
 +GameplayTagList=(Tag="Enemy.State.Jump.Grounded",DevComment="")
 +GameplayTagList=(Tag="Enemy.State.Jump.OnAir",DevComment="")
